bk_ida/gccida/g0/skip_escaped_newlines
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/cpplex.c:636:35: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cppchar_t  skip_escaped_newlines( cpp_reader_0 *pfile) 
                                  ^~~~~~~~~~~~
                                  cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/cpplex.c:641:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // [rsp+20h] [rbp-10h] 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/cpplex.c:656:8: error: use of undeclared identifier 'cpp_trigraph_map'; did you mean '_cpp_trigraph_map'?
next = cpp_trigraph_map[*( ( unsigned __int8 *)buffer->cur + 1)]; 
       ^~~~~~~~~~~~~~~~
       _cpp_trigraph_map
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/cpphash.h:351:28: note: '_cpp_trigraph_map' declared here
extern const unsigned char _cpp_trigraph_map[UCHAR_MAX + 1];
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/cpplex.c:666:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[*v1] & 0x800) != 0 && buffer->cur < buffer->rlimit ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/cpplex.c:667:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*v1] & 0x400) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/skip_escaped_newlines/src/obj/cpplex.o] Error 1
